fix align in service section

--- a/style/leon.css
+++ b/style/leon.css
@@ -319,6 +319,12 @@ body {
         display: none;
     }
 }
+@media (min-width: 1199px) {
+    .services .services-content .col:nth-child(2) .srv:nth-child(2) {
+        margin-top: 60px;
+    }
+}
+
 
 
 /*  End service Section */
